--- a/models/team-member.ini
+++ b/models/team-member.ini
@@ -13,3 +13,12 @@ type = string
 [fields.email]
 label = Email
 type = string
+
+[fields.dob]
+label = Date of birth
+type = date
+
+[fields.image]
+label = Image
+type = select
+source = record.attachments.images
