--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,8 @@ install:
   - pip install lektor
 
 script:
-  - "lektor build --no-prune"
+  - "lektor build"
 
 deploy:
   provider: script
   script: "lektor deploy --username $GITHUB_USER --password $GITHUB_PASS"
-    on:
-      branch: gh-pages
