--- a/models/team-member.ini
+++ b/models/team-member.ini
@@ -22,3 +22,15 @@ type = date
 label = Image
 type = select
 source = record.attachments.images
+
+[fields.facebook]
+label = Facebook
+type = string
+
+[fields.twitter]
+label = Twitter
+type = string
+
+[fields.linkedin]
+label = Linkedin
+type = string
